// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails testing Snapshot testing 1`] = `
<TaskDetails
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "Ready",
    }
  }
>
  <div>
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <OnRunningIcon
                className="pf-u-mr-sm"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 64 1024 1024"
                  width="1em"
                >
                  <path
                    d="M511.781-73.143c-70.656 0-136.923 13.312-198.875 40.009s-116.078 63.269-162.45 109.934c-46.299 46.665-82.944 100.937-109.934 162.962s-40.448 128.293-40.448 198.875 13.458 136.923 40.448 198.875 63.634 116.078 109.934 162.45c46.299 46.299 100.425 82.944 162.45 109.934s128.293 40.448 198.875 40.448 136.923-13.458 198.875-40.448 116.078-63.634 162.45-109.934c46.299-46.299 82.944-100.425 109.934-162.45s40.448-128.293 40.448-198.875-13.458-136.923-40.448-198.875-63.634-116.297-109.934-162.962-100.425-83.31-162.45-109.934-128.293-40.009-198.875-40.009v0zM361.326 795.94c-46.958-20.334-88.137-48.128-123.465-83.456s-63.122-76.434-83.456-123.465-30.501-97.134-30.501-150.455 10.167-103.643 30.501-150.894c20.334-47.323 48.128-88.43 83.456-123.465s76.434-62.61 123.465-82.944 97.134-30.501 150.455-30.501 103.424 10.167 150.455 30.501c46.958 20.334 88.137 47.982 123.465 82.944s63.122 76.142 83.456 123.465 30.501 97.646 30.501 150.894-10.167 103.424-30.501 150.455c-20.334 46.958-48.128 88.137-83.456 123.465s-76.434 63.122-123.465 83.456-97.134 30.501-150.455 30.501c-53.321 0-103.424-10.167-150.455-30.501v0zM730.697 498.395c1.975-8.119 2.414-19.383-1.17-26.331-7.387-14.263-16.457-26.99-26.185-40.96-83.017-119.296-158.135-200.485-249.71-305.371-17.993-20.626-34.889-13.751-42.057-9.070-15.579 10.24-15.799 29.769-7.314 52.297 9.801 25.966 20.48 57.783 29.842 79.799 22.455 52.736 20.187 58.075 41.911 114.907-52.297-0.1024-127.781-0.951-180.078-1.463-15.067-0.146-33.499 1.902-39.497 16.311-5.778 13.751-0.146 26.039 8.558 38.107 64.146 89.381 172.617 212.626 248.174 294.546 6.51 7.022 30.062 23.333 43.739 21.358 10.825-1.536 21.87 1.243 26.843-9.289 5.851-12.434 2.706-25.746-2.56-37.23-22.016-48.347-45.714-118.638-71.095-174.519 50.615-0.073 144.53-0.073 195.145-0.146 8.558 0 18.432-0.731 23.406-8.046 1.024-1.536 1.755-3.145 2.121-4.901v0z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </OnRunningIcon>
               
              <span>
                Ready
              </span>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with completed task 1`] = `
<TaskDetails
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": 2020-02-19T11:11:56.282Z,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "completed",
    }
  }
>
  <div>
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <CheckCircleIcon
                className="pf-u-mr-sm"
                color="var(--pf-global--success-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-u-mr-sm"
                  fill="var(--pf-global--success-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </CheckCircleIcon>
               
              <span>
                completed
              </span>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="completed"
          label="Completed"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="completed"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Completed
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with description 1`] = `
<TaskDetails
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": "This is a description",
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "Ready",
    }
  }
>
  <div>
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="description"
          label="Description"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="description"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Description
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  This is a description
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <OnRunningIcon
                className="pf-u-mr-sm"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 64 1024 1024"
                  width="1em"
                >
                  <path
                    d="M511.781-73.143c-70.656 0-136.923 13.312-198.875 40.009s-116.078 63.269-162.45 109.934c-46.299 46.665-82.944 100.937-109.934 162.962s-40.448 128.293-40.448 198.875 13.458 136.923 40.448 198.875 63.634 116.078 109.934 162.45c46.299 46.299 100.425 82.944 162.45 109.934s128.293 40.448 198.875 40.448 136.923-13.458 198.875-40.448 116.078-63.634 162.45-109.934c46.299-46.299 82.944-100.425 109.934-162.45s40.448-128.293 40.448-198.875-13.458-136.923-40.448-198.875-63.634-116.297-109.934-162.962-100.425-83.31-162.45-109.934-128.293-40.009-198.875-40.009v0zM361.326 795.94c-46.958-20.334-88.137-48.128-123.465-83.456s-63.122-76.434-83.456-123.465-30.501-97.134-30.501-150.455 10.167-103.643 30.501-150.894c20.334-47.323 48.128-88.43 83.456-123.465s76.434-62.61 123.465-82.944 97.134-30.501 150.455-30.501 103.424 10.167 150.455 30.501c46.958 20.334 88.137 47.982 123.465 82.944s63.122 76.142 83.456 123.465 30.501 97.646 30.501 150.894-10.167 103.424-30.501 150.455c-20.334 46.958-48.128 88.137-83.456 123.465s-76.434 63.122-123.465 83.456-97.134 30.501-150.455 30.501c-53.321 0-103.424-10.167-150.455-30.501v0zM730.697 498.395c1.975-8.119 2.414-19.383-1.17-26.331-7.387-14.263-16.457-26.99-26.185-40.96-83.017-119.296-158.135-200.485-249.71-305.371-17.993-20.626-34.889-13.751-42.057-9.070-15.579 10.24-15.799 29.769-7.314 52.297 9.801 25.966 20.48 57.783 29.842 79.799 22.455 52.736 20.187 58.075 41.911 114.907-52.297-0.1024-127.781-0.951-180.078-1.463-15.067-0.146-33.499 1.902-39.497 16.311-5.778 13.751-0.146 26.039 8.558 38.107 64.146 89.381 172.617 212.626 248.174 294.546 6.51 7.022 30.062 23.333 43.739 21.358 10.825-1.536 21.87 1.243 26.843-9.289 5.851-12.434 2.706-25.746-2.56-37.23-22.016-48.347-45.714-118.638-71.095-174.519 50.615-0.073 144.53-0.073 195.145-0.146 8.558 0 18.432-0.731 23.406-8.046 1.024-1.536 1.755-3.145 2.121-4.901v0z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </OnRunningIcon>
               
              <span>
                Ready
              </span>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with owner 1`] = `
<TaskDetails
  userTask={
    Object {
      "actualOwner": "John Snow",
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "Ready",
    }
  }
>
  <div>
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <OnRunningIcon
                className="pf-u-mr-sm"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 64 1024 1024"
                  width="1em"
                >
                  <path
                    d="M511.781-73.143c-70.656 0-136.923 13.312-198.875 40.009s-116.078 63.269-162.45 109.934c-46.299 46.665-82.944 100.937-109.934 162.962s-40.448 128.293-40.448 198.875 13.458 136.923 40.448 198.875 63.634 116.078 109.934 162.45c46.299 46.299 100.425 82.944 162.45 109.934s128.293 40.448 198.875 40.448 136.923-13.458 198.875-40.448 116.078-63.634 162.45-109.934c46.299-46.299 82.944-100.425 109.934-162.45s40.448-128.293 40.448-198.875-13.458-136.923-40.448-198.875-63.634-116.297-109.934-162.962-100.425-83.31-162.45-109.934-128.293-40.009-198.875-40.009v0zM361.326 795.94c-46.958-20.334-88.137-48.128-123.465-83.456s-63.122-76.434-83.456-123.465-30.501-97.134-30.501-150.455 10.167-103.643 30.501-150.894c20.334-47.323 48.128-88.43 83.456-123.465s76.434-62.61 123.465-82.944 97.134-30.501 150.455-30.501 103.424 10.167 150.455 30.501c46.958 20.334 88.137 47.982 123.465 82.944s63.122 76.142 83.456 123.465 30.501 97.646 30.501 150.894-10.167 103.424-30.501 150.455c-20.334 46.958-48.128 88.137-83.456 123.465s-76.434 63.122-123.465 83.456-97.134 30.501-150.455 30.501c-53.321 0-103.424-10.167-150.455-30.501v0zM730.697 498.395c1.975-8.119 2.414-19.383-1.17-26.331-7.387-14.263-16.457-26.99-26.185-40.96-83.017-119.296-158.135-200.485-249.71-305.371-17.993-20.626-34.889-13.751-42.057-9.070-15.579 10.24-15.799 29.769-7.314 52.297 9.801 25.966 20.48 57.783 29.842 79.799 22.455 52.736 20.187 58.075 41.911 114.907-52.297-0.1024-127.781-0.951-180.078-1.463-15.067-0.146-33.499 1.902-39.497 16.311-5.778 13.751-0.146 26.039 8.558 38.107 64.146 89.381 172.617 212.626 248.174 294.546 6.51 7.022 30.062 23.333 43.739 21.358 10.825-1.536 21.87 1.243 26.843-9.289 5.851-12.434 2.706-25.746-2.56-37.23-22.016-48.347-45.714-118.638-71.095-174.519 50.615-0.073 144.53-0.073 195.145-0.146 8.558 0 18.432-0.731 23.406-8.046 1.024-1.536 1.755-3.145 2.121-4.901v0z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </OnRunningIcon>
               
              <span>
                Ready
              </span>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  John Snow
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;

exports[`TaskDetails testing Snapshot testing with potential groups and potential user 1`] = `
<TaskDetails
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [
        "group1",
        "group2",
      ],
      "potentialUsers": Array [
        "john",
        "mary",
      ],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "Ready",
    }
  }
>
  <div>
    <Form>
      <form
        className="pf-c-form"
        noValidate={true}
      >
        <FormGroup
          fieldId="name"
          label="Name"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="name"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  Apply for visa
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="id"
          label="ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="id"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  45a73767-5da3-49bf-9c40-d533c3e77ef3
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="state"
          label="State"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="state"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  State
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <OnRunningIcon
                className="pf-u-mr-sm"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 64 1024 1024"
                  width="1em"
                >
                  <path
                    d="M511.781-73.143c-70.656 0-136.923 13.312-198.875 40.009s-116.078 63.269-162.45 109.934c-46.299 46.665-82.944 100.937-109.934 162.962s-40.448 128.293-40.448 198.875 13.458 136.923 40.448 198.875 63.634 116.078 109.934 162.45c46.299 46.299 100.425 82.944 162.45 109.934s128.293 40.448 198.875 40.448 136.923-13.458 198.875-40.448 116.078-63.634 162.45-109.934c46.299-46.299 82.944-100.425 109.934-162.45s40.448-128.293 40.448-198.875-13.458-136.923-40.448-198.875-63.634-116.297-109.934-162.962-100.425-83.31-162.45-109.934-128.293-40.009-198.875-40.009v0zM361.326 795.94c-46.958-20.334-88.137-48.128-123.465-83.456s-63.122-76.434-83.456-123.465-30.501-97.134-30.501-150.455 10.167-103.643 30.501-150.894c20.334-47.323 48.128-88.43 83.456-123.465s76.434-62.61 123.465-82.944 97.134-30.501 150.455-30.501 103.424 10.167 150.455 30.501c46.958 20.334 88.137 47.982 123.465 82.944s63.122 76.142 83.456 123.465 30.501 97.646 30.501 150.894-10.167 103.424-30.501 150.455c-20.334 46.958-48.128 88.137-83.456 123.465s-76.434 63.122-123.465 83.456-97.134 30.501-150.455 30.501c-53.321 0-103.424-10.167-150.455-30.501v0zM730.697 498.395c1.975-8.119 2.414-19.383-1.17-26.331-7.387-14.263-16.457-26.99-26.185-40.96-83.017-119.296-158.135-200.485-249.71-305.371-17.993-20.626-34.889-13.751-42.057-9.070-15.579 10.24-15.799 29.769-7.314 52.297 9.801 25.966 20.48 57.783 29.842 79.799 22.455 52.736 20.187 58.075 41.911 114.907-52.297-0.1024-127.781-0.951-180.078-1.463-15.067-0.146-33.499 1.902-39.497 16.311-5.778 13.751-0.146 26.039 8.558 38.107 64.146 89.381 172.617 212.626 248.174 294.546 6.51 7.022 30.062 23.333 43.739 21.358 10.825-1.536 21.87 1.243 26.843-9.289 5.851-12.434 2.706-25.746-2.56-37.23-22.016-48.347-45.714-118.638-71.095-174.519 50.615-0.073 144.53-0.073 195.145-0.146 8.558 0 18.432-0.731 23.406-8.046 1.024-1.536 1.755-3.145 2.121-4.901v0z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </OnRunningIcon>
               
              <span>
                Ready
              </span>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="priority"
          label="Priority"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="priority"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Priority
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  1
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="owner"
          label="Owner"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="owner"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Owner
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  -
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="potential_users"
          label="Potential users"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="potential_users"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Potential users
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  john, mary
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="potential_groups"
          label="Potential groups"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="potential_groups"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Potential groups
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  group1, group2
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="started"
          label="Started"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="started"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Started
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="lastUpdate"
          label="Last Update"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="lastUpdate"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Last Update
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  <t
                    ago={false}
                    calendar={false}
                    decimal={false}
                    element={null}
                    filter={[Function]}
                    fromNow={true}
                    interval={60000}
                    local={false}
                    onChange={[Function]}
                    titleFormat=""
                    toNow={false}
                    unit={null}
                    unix={false}
                    utc={false}
                    withTitle={false}
                  >
                    <time
                      dateTime={"2020-02-19T11:11:56.000Z"}
                    >
                      8 months ago
                    </time>
                  </t>
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="process"
          label="Process"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="process"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  travels
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
        <FormGroup
          fieldId="processInstance"
          label="Process Instance ID"
        >
          <div
            className="pf-c-form__group"
          >
            <div
              className="pf-c-form__group-label"
            >
              <label
                className="pf-c-form__label"
                htmlFor="processInstance"
              >
                <span
                  className="pf-c-form__label-text"
                >
                  Process Instance ID
                </span>
              </label>
               
            </div>
            <div
              className="pf-c-form__group-control"
            >
              <Text
                component="p"
              >
                <p
                  className=""
                  data-pf-content={true}
                >
                  9ae7ce3b-d49c-4f35-b843-8ac3d22fa427
                </p>
              </Text>
            </div>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</TaskDetails>
`;
